force-app/main/default/objects/nBRIDGER__OFAC_Match__c/nBRIDGER__OFAC_Match__c.object-meta.xml
<CustomObject>
    <label>OFAC_Match</label>
    <nameField>
        <label>OFAC_Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>