force-app/main/default/objects/nBRIDGER__OFAC_Match__c/fields/nBRIDGER__BirthDate__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__BirthDate__c</fullName>
    <label>BirthDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>