force-app/main/default/objects/nBRIDGER__OFAC_Match__c/fields/nBRIDGER__MatchId__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__MatchId__c</fullName>
    <description>The unique match ID returned by Bridger for each match found in Lexis Nexis Bridger.</description>
    <externalId>true</externalId>
    <label>MatchId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>