force-app/main/default/objects/nBRIDGER__OFAC_Match__c/fields/nBRIDGER__Name__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>