force-app/main/default/objects/nBRIDGER__OFAC_Match__c/fields/nBRIDGER__OFAC_Request__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__OFAC_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OFAC_Request</label>
    <referenceTo>nBRIDGER__OFAC_Request__c</referenceTo>
    <relationshipLabel>OFAC_Matches</relationshipLabel>
    <relationshipName>OFAC_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>