force-app/main/default/objects/nBRIDGER__OFAC_Match__c/fields/nBRIDGER__Place_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Place_Of_Birth__c</fullName>
    <label>Place_Of_Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>