force-app/main/default/objects/nBRIDGER__OFAC_Match__c/fields/nBRIDGER__Score__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Score__c</fullName>
    <label>Score</label>
    <length>25</length>
    <type>Text</type>
</CustomField>