force-app/main/default/objects/nBRIDGER__OFAC_Match__c/fields/nBRIDGER__Watchlist__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Watchlist__c</fullName>
    <label>Watchlist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>